RESOLVED FIXED241471
computeUnderlineOffset should not take TextRun
https://bugs.webkit.org/show_bug.cgi?id=241471
Summary computeUnderlineOffset should not take TextRun
alan
Reported 2022-06-09 09:28:38 PDT
This is in preparation for taking visualOverflowForDecorations into use in IFC.
Attachments
Patch (10.37 KB, patch)
2022-06-09 09:48 PDT, alan
koivisto: review+
ews-feeder: commit-queue-
Patch (9.73 KB, patch)
2022-06-09 12:27 PDT, alan
no flags
alan
Comment 1 2022-06-09 09:48:30 PDT
alan
Comment 2 2022-06-09 12:27:56 PDT
EWS
Comment 3 2022-06-09 20:08:19 PDT
Committed r295444 (251450@main): <https://commits.webkit.org/251450@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460140 [details].
Radar WebKit Bug Importer
Comment 4 2022-06-09 20:09:13 PDT
Note You need to log in before you can comment on or make changes to this bug.